--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -38,3 +38,5 @@ common_CONNECTION_HAS_NOT_OPEN=Connection is not open.
 common_CANNOT_FIND_COLUMN=Cannot find any columns.
 query_streamClosed=Stream closed
 query_invalidTableName=Invalid table name:
+
+dateUtil.ConvertFails=Convert to date fails. Source:
