BZ151737-names used for driver definitions not consistent within UI... this has been fixed. all instances of "driver instance" or "driver entry" have been changed to "driver definition" consistently

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -11,8 +11,8 @@
 # package: org.eclipse.datatools.connectivity.drivers
 DriverMgmtPlugin.default_instance_suffix =  Default
 
-DriverMgmtPlugin.BundleMissing = Plug-in {0} missing while setting up default driver instances.
-DriverMgmtPlugin.FileMissing = File {0} missing while setting up default driver instances.
+DriverMgmtPlugin.BundleMissing = Plug-in {0} missing while setting up default driver definitions.
+DriverMgmtPlugin.FileMissing = File {0} missing while setting up default driver definitions.
 
 PropertySetImpl.copy_prefix = Copy of 
 PropertiesLabelProvider.url=Default URL
@@ -43,7 +43,7 @@ DriverPreferences.title.removeMessage = Are you sure?
 DriverPreferences.text.removeMessage = Are you sure you want to remove the driver {0} ?
 
 DriverDefinitionsDialog.title = Available Driver Definitions
-DriverDefinitionsDialog.message = Add, edit, or remove driver definitions to manage available driver instances.
+DriverDefinitionsDialog.message = Add, edit, or remove driver definitions to manage available driver definitions.
 DriverDefinitionsDialog.windowTitle = Driver Definitions
 
 DelimitedStringList.button.add = Add
@@ -54,20 +54,20 @@ DelimitedStringList.button.clear = Clear All
 
 DriverListCombo.button.browse = ...
 
-DriverValidator.msg.missing_required_property = Required property in driver instance missing value: {0}
-DriverValidator.msg.jarfile_not_found = Unable to locate jar/zip in file system as specified by the driver instance: {0}
+DriverValidator.msg.missing_required_property = Required property in driver definition missing value: {0}
+DriverValidator.msg.jarfile_not_found = Unable to locate jar/zip in file system as specified by the driver definition: {0}
 DriverInstance.error.invalidClassPath=Invalid driver class path
-DriverValidator.msg.empty_jar_list = Empty jar list in driver instance.
+DriverValidator.msg.empty_jar_list = Empty jar list in driver definition.
 
 DriverValidator.msg.no_driver_selected = Define and select a driver from the drop-down list to continue.
 DriverInstance.error.jarListNotDefined=Invalid driver definition; JAR list not defined.
 
 NewDriverDialog.label.availableTemplates = Available Driver Templates
 NewDriverDialog.label.driverNameText = Driver Name:
-NewDriverDialog.button.edit_immediately = Edit New Driver Instance Immediately
-NewDriverDialog.title = Specify a Driver Template and Instance Name
-NewDriverDialog.message = Select an available driver template and provide a name for the new driver instance.
-NewDriverDialog.windowTitle = New Driver Entry
+NewDriverDialog.button.edit_immediately = Edit New Driver Definition Immediately
+NewDriverDialog.title = Specify a Driver Template and Definition Name
+NewDriverDialog.message = Select an available driver template and provide a name for the new driver definition.
+NewDriverDialog.windowTitle = New Driver Definition
 NewDriverDialog.text.id_prefix = DriverDefn.
 NewDriverDialog.driverExistsWithName = A driver already exists with that name. Please provide a unique driver name.
 NewDriverDialog.driverNameNoSpaces = A driver name may not start or end with a space.
@@ -85,7 +85,7 @@ EditDriverDialog.column.value = Value
 EditDriverDialog.properties.tooltip.default = List of available driver properties.
 EditDriverDialog.title = Provide Driver Details
 EditDriverDialog.message = Modify details in the fields below to provide a unique name, a list of required jars, and set any available and applicable property values.
-EditDriverDialog.windowTitle = Edit Driver Entry
+EditDriverDialog.windowTitle = Edit Driver Definition
 EditDriverDialog.title.filebrowse = Select the file:
 EditDriverDialog.text.id_prefix = DriverDefn.
 EditDriverDialog.text.id_test_prefix = TestDriverDefn.
