151040 (Enhance the content assist feature ) 151042 (Refactor the SQLParser API to make it thread safe) 151046 (Add more SQL editor context menu) 151048 (Add more preference pages ) 153550 (Listens to connection profile and connect events) 153551 (Allow SQLDevTools UI components to be customized) 144834 (SQLResultRunnable for UserDefinedFunction (UDF) not available) 156829 (Ad-hoc SQL not executed by vendor provided ExecutionService)

--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
@@ -1,16 +1,23 @@
-sqleditor.SQLEditor.saveToDBActionError=Failed saving to database the text: {0}
-sqleditor.SQLEditor.refreshError=Failed to do refresh action
-sqleditor.SQLEditor.pasteSQLError=Failed to do pasteSQL action for {0}
-sqleditor.SQLEditor.sqlFromPainter=SQL obtained from SQL Painter is : {0}
-sqleditor.SQLEditorInput.initError=Failed to initialize  the sql editor for the procedure {0}
-sqleditor.SQLEditor.pasteSQLvariablePair=Variable name-datatype pair filled into table : {0}
-sqleditor.SQLEditor.pasteSQLjdbcString=JDBC variable string :{0}
-sqleditor.SQLEditor.pasteSQLvarString=String containing all the variables : {0}
-sqleditor.SQLEditor.pasteSQLvariableIncorrectSyntax=Incorrect syntax in local variable declaration
-sqlEditor.SQLEditorContributor.bundleNull=Failed to initialize SQLEditorContributor, as the resource bundle could not be found
-sqlEditor.SQLEditorDocumentProvider.failGetSource=Failed to get source
-sqlEditor.SQLEditorDocumentProvider.saveDbFail=Save to db fail: {0}
-sqlEditor.SQLEditorDocumentProvider.getTextFileBuffer=Failed to get file.
+sqleditor_SQLEditor_saveToDBActionError=Failed saving to database the text: {0}
+sqleditor_SQLEditor_refreshError=Failed to do refresh action
+sqleditor_SQLEditor_pasteSQLError=Failed to do pasteSQL action for {0}
+sqleditor_SQLEditor_sqlFromPainter=SQL obtained from SQL Painter is : {0}
+sqleditor_SQLEditorInput_initError=Failed to initialize  the sql editor for the procedure {0}
+sqleditor_SQLEditor_pasteSQLvariablePair=Variable name-datatype pair filled into table : {0}
+sqleditor_SQLEditor_pasteSQLjdbcString=JDBC variable string :{0}
+sqleditor_SQLEditor_pasteSQLvarString=String containing all the variables : {0}
+sqleditor_SQLEditor_pasteSQLvariableIncorrectSyntax=Incorrect syntax in local variable declaration
+sqlEditor_SQLEditorContributor_bundleNull=Failed to initialize SQLEditorContributor, as the resource bundle could not be found
+sqlEditor_SQLEditorDocumentProvider_failGetSource=Failed to get source
+sqlEditor_SQLEditorDocumentProvider_saveDbFail=Save to db fail: {0}
+sqlEditor_SQLEditorDocumentProvider_getTextFileBuffer=Failed to get file.
 
 
-RoutineAnnotationModel.resourcechanged=Error occurrs while updating the routine annotation model during resource changed event.
+RoutineAnnotationModel_resourcechanged=Error occurrs while updating the routine annotation model during resource changed event.
+
+SQLEditor_error_save_title=Problems During Save
+SQLEditor_error_save_notsupport=Save failed. Make sure only the procedural object's body is modified and the syntax is correct.
+
+SQLEditor_profile_disconnected=The original connection is lost. Choose 'OK' to save to a file, or 'Cancel' to close.
+SQLEditor_profile_information=Connection Profile Information
+
