--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/launching/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/launching/messages.properties
@@ -1,17 +1,17 @@
-common.error=Error
+common_error=Error
 
-NotSupportedConfigurationException.cause=The property {0} is not supported
-LaunchHelper.invalid.launch.configuration=Invalid launch configuration
-LaunchHelper.error.readconfiguration=Error occurs when reading the launch configuration
+NotSupportedConfigurationException_cause=The property {0} is not supported
+LaunchHelper_invalid_launch_configuration=Invalid launch configuration
+LaunchHelper_error_readconfiguration=Error occurs when reading the launch configuration
 
-SPDebugTarget_Run.notSupported=Not supported
-SPDebugTarget_Run.debug.exception=Debug exception occurred
+SPDebugTarget_Run_notSupported=Not supported
+SPDebugTarget_Run_debug_exception=Debug exception occurred
 
-SPLaunchConfigurationDelegate.Launching=Launching
-SPLaunchConfigurationDelegate.UnsupportedServerType=Unsupported server type: 
-SPLaunchConfigurationDelegate.notsupported=This mode is not supported yet!
-SPLaunchConfigurationDelegate.CreatingClientConn=Creating client connection
-SPLaunchConfigurationDelegate.AttachingConn=Attaching to connection
-SPLaunchConfigurationDelegate.NoPermission=Cannot debug. Maybe you do not have enough permission.
-SPLaunchConfigurationDelegate.CreatingDebugger=Creating debugger
+SPLaunchConfigurationDelegate_Launching=Launching
+SPLaunchConfigurationDelegate_UnsupportedServerType=Unsupported server type:
+SPLaunchConfigurationDelegate_notsupported=This mode is not supported yet!
+SPLaunchConfigurationDelegate_CreatingClientConn=Creating client connection
+SPLaunchConfigurationDelegate_AttachingConn=Attaching to connection
+SPLaunchConfigurationDelegate_NoPermission=Cannot debug. Maybe you do not have enough permission.
+SPLaunchConfigurationDelegate_CreatingDebugger=Creating debugger
 
