[151751,151758,152987] integrate catalog loaders with generic JDBC catalog elements, includes adding support for stored procedures udfs and udts within the generic JDBC catalog elements.  added support for Catalog objects

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
@@ -101,6 +101,7 @@ DATATOOLS.SERVER.UI.EXPLORER.EXTERNAL_DEPENDENCY = External Dependency
 DATATOOLS.SERVER.UI.EXPLORER.DB2_CLOUDSCAPE = localhost [DB2 Cloudscape]
 DATATOOLS.SERVER.UI.EXPLORER.STORED_PROCEDURE=Stored Procedures
 DATATOOLS.SERVER.UI.EXPLORER.UDF=User-Defined Functions
+DATATOOLS.SERVER.UI.EXPLORER.CATALOG=Catalogs
 
 #
 ## Update Offline Items
