CheckIn:Updated Flat file driver, add some new feature and fix a series of bugs.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -24,10 +24,13 @@ query_IO_EXCEPTION=An I/O Exception occurred when reading the file.
 query_SOURCE_DATA_ERROR=Duplicate column names found in source data.
 query_COLUMN_NAME_ERROR=Column name error
 query_INVALID_FLAT_FILE=The flatfile data source in not valid.
+query_text_error=Query-text format error
 resultSet_COLUMN_NOT_FOUND=Column not found:
 resultSet_CURSOR_HAS_NOT_BEEN_INITIALIZED=Cursor has not been initialized yet.
 
 resultSetMetaData_INVALID_COLUMN_INDEX=Invalid column index:
+
+savedSelectedColumnsInfoString_INVALID=Invalid Saved Columns Information
 
 dataTypes_TYPE_NAME_INVALID=Invalid type name:
 
@@ -36,6 +39,12 @@ dataSetMetaData_PRODUCT_NAME=DTP ODA Flat File Data Source Provider
 common_ARGUMENT_CANNOT_BE_NULL=Arguments cannot be null.
 common_CONNECTION_HAS_NOT_OPEN=Connection is not open.
 common_CANNOT_FIND_COLUMN=Cannot find any columns.
+common_NULL_QUERY_TEXT = Query text is null
+
+data_read_error=Cannot read data correctly, data source settings probably changed
+
+Invalid_column_name = Invaid column name
+
 query_streamClosed=Stream closed
 query_invalidTableName=Invalid table name:
 
