CheckIn:Updated Flat file driver, add some new feature and fix a series of bugs.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -14,11 +14,39 @@
 wizard.title.selectColumns=Select Columns
 wizard.defaultMessage.selectFolder=Select the folder that contains the flat files
 wizard.defaultMessage.selectFile=Select the file and the columns for the data set
+
 label.selectFolder=Select &folder: 
 label.selectFile=Select f&ile:
 label.fileFilter=File filte&r:
 label.includeTypeLine=Use second line as &data type indicator
+label.includeColumnNameLine = Use first line as column &name indicator
 label.selectCharset=Select &charset:
+label.selectFlatfileStyle=Select flatfile &style:
+label.flatfileComma=CSV
+label.flatfileSemicolon=SSV
+label.flatfilePipe=PSV
+label.flatfileTab=TSV
+
+editor.title.name=Name
+editor.title.originalName=Original Name
+editor.title.type=Type
+
+
+datatypes.dateTime=Timestamp
+datatypes.decimal=Big Decimal
+datatypes.float=Double
+datatypes.integer=Integer
+datatypes.string=String
+datatypes.date=Date
+datatypes.time=Time
+
+tooltip.flatfilestyle=Move the mouse to each flat file style for more infomation
+tooltip.csv=Comma-{ , } Seperated Values
+tooltip.ssv=Semicolon-{ ; } Seperated Values
+tooltip.psv=Pipe-{ | } Seperated Values
+tooltip.tsv=Tab-{ Tab } Seperated Values
+tooltip.columnnameline=Please make sure the existence of column names\n in the first row of the selected file
+tooltip.typeline=Please make sure the existence of data type line\n in the second row of the selected file
 error.selectFolder=Please select a valid folder.
 error.selectColumns=Please select at least one column for this data set.
 error.emptyPath=Please enter a path.
@@ -26,7 +54,11 @@ error.errorExist=Error exists in the current page.  Would you like to save it an
 error.noCSVFiles=The folder, "{0}", does not have any specified files in it.
 error.invalidFilePath=The file path is invalid.  Would you like to continue?
 error.emptyFilePath=The file path is empty.  Would you like to continue?
+error.duplicatedNameValueOrEmpty=Duplicated Name Value or Empty
+error.invalidSavedColumnsInfo = Invalid saved Columns Info
+error.invalidColumnName=Invalid Column Name
+
 title.warning=Warning
-warning.columnExtensionInvalid=The selected file might not be a valid flat file.  Would you like to continue anyway?
+warning.fileExtensionInvalid=The selected file might not be a valid flat file.
 confirm.reselectFileFilterTitle=Confirm to select a different file filter.
 confirm.reselectFileFilterMessage=Selecting a different file filter will leave previous operations unsaved.\n\nAre you sure?
