--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
@@ -21,3 +21,7 @@ SQLEditor_error_save_notsupport=Save failed. Make sure only the procedural objec
 SQLEditor_profile_disconnected=The original connection is lost. Choose 'OK' to save to a file, or 'Cancel' to close.
 SQLEditor_profile_information=Connection Profile Information
 
+# --- TextEditor Save As ---
+Editor_error_save_message=Save could not be completed. {0}
+Editor_error_save_title=Problems During Save As...
+Editor_warning_save_delete=The original file ''{0}'' has been deleted.
