--- a/tests/org.eclipse.datatools.sqltools.test/src/org/eclipse/datatools/sqltools/tests/verification/hooks/messages.properties
+++ b/tests/org.eclipse.datatools.sqltools.test/src/org/eclipse/datatools/sqltools/tests/verification/hooks/messages.properties
@@ -1,2 +1,2 @@
-Derby_driver_jar_list=D:/software/db-derby-10.1.2.1-bin/lib/derby.jar
-Log_file_location=D:/tmp/dtpguitest.log
+Derby_driver_jar_list=c:/software/db-derby-10.1.2.1-bin/lib/derby.jar
+Log_file_location=c:/tmp/dtpguitest.log
