Fixed the error of parsing flatfiles in which there are empty lines, code refactor

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -57,6 +57,7 @@ error.emptyFilePath=The file path is empty.  Would you like to continue?
 error.duplicatedNameValueOrEmpty=Duplicated Name Value or Empty
 error.invalidSavedColumnsInfo = Invalid saved Columns Info
 error.invalidColumnName=Invalid Column Name
+error.invalidQureyText=Invalid Query-Text
 
 title.warning=Warning
 warning.fileExtensionInvalid=The selected file might not be a valid flat file.
