one single double quote in rows of flat file will be an invalid format, this will be an error pop out or displayed in the Data Set Editor's Message
A new test case was added for this case, and code refactor was made to in FlatFileQuery to correctly parse flatfiles with no column names specified

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -45,6 +45,8 @@ data_read_error=Cannot read data correctly, data source settings probably change
 
 Invalid_column_name = Invaid column name
 
+invalid_flatfile_format = Invalid flat file format
+
 query_streamClosed=Stream closed
 query_invalidTableName=Invalid table name:
 
