BZ 151737 - fixing remaining "driver instance" text to be "driver definition"

--- a/plugins/org.eclipse.datatools.connectivity.jdt/src/org/eclipse/datatools/connectivity/jdt/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.jdt/src/org/eclipse/datatools/connectivity/jdt/internal/messages.properties
@@ -12,5 +12,5 @@
 
 DriverClasspathContainerPage.name = MyDriverClassPathPage
 DriverClasspathContainerPage.title = Connectivity Driver Definition
-DriverClasspathContainerPage.msg = Select a driver instance to add its jars to the classpath.
-DriverClasspathContainerPage.combo.title = Available Driver Instances:
+DriverClasspathContainerPage.msg = Select a driver definition to add its jars to the classpath.
+DriverClasspathContainerPage.combo.title = Available Driver Definitions:
