--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
@@ -1,3 +1,5 @@
+plugin_internal_error=Internal error
+
 sqleditor_SQLEditor_saveToDBActionError=Failed saving to database the text: {0}
 sqleditor_SQLEditor_refreshError=Failed to do refresh action
 sqleditor_SQLEditor_pasteSQLError=Failed to do pasteSQL action for {0}
