--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/messages.properties
@@ -1,3 +1,15 @@
+DefaultDBFactory_version=1.0
+NotSupportedSettingException_cause=The property {0} is not supported
+
+plugin_internal_error=Editor core plugin internal error
+
+ProcIdentifierImpl_map_cant_be_null=Map cannot be null
+ProcIdentifierImpl_invalid_identifier_string=Invalid identifier string
+
+DefaultDBFactory_vendor=Undefined
+
+DefaultSQLSyntax_exception_splitSQL=Exception occurred while splitting sql: {0}
+
 ControlConnectionManager_unknownServerType=Can not determine the correct server type by the conection profile: {0}
 
 AbstractControlConnection_connection_already_being_debugged=Connection {0} is already being debugged
