--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -59,3 +59,5 @@ AddTemplateAction_error_write_message=Failed to save template.
 AddTemplateAction_label=Save as &Template...
 AddTemplateAction_tooltip=Save Selected Text as Template...
 
+BaseExecuteAction_job_title=SQL Statement Execution
+
