Incorporate the group results feature of SQL Results view into SQL Editor

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -61,3 +61,4 @@ AddTemplateAction_tooltip=Save Selected Text as Template...
 
 BaseExecuteAction_job_title=SQL Statement Execution
 
+BaseExecuteAction_group_exec_title=Group execution in SQL Editor
