--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/result/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/result/messages.properties
@@ -9,6 +9,7 @@ GroupSQLResultRunnable_name=SQL statement execution
 GroupSQLResultRunnable_groups=({0} groups)
 GroupSQLResultRunnable_group=Group {0}
 GroupSQLResultRunnable_error_interrupted=The execution has been interrupted.
+GroupSQLResultRunnable_group_exec=Group execution
 
 GroupSQLResultRunnable_title=Continue Execution
 GroupSQLResultRunnable_message=Error occurred when executing last statement(s). Do you want to continue?
