--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
@@ -17,6 +17,8 @@
 #
 ## Actions
 #
+DATATOOLS.SERVER.UI.EXPLORER.DATA = D&ata
+DATATOOLS.SERVER.UI.EXPLORER.DATA = &Sample Contents
 DATATOOLS.SERVER.UI.EXPLORER.CONNECT_SERVER = Add Server Connection
 DATATOOLS.SERVER.UI.EXPLORER.DISCONNECT_SERVER = Disconnect Server
 DATATOOLS.SERVER.UI.EXPLORER.LAYOUT_OPTIONS = layout
@@ -106,8 +108,10 @@ DATATOOLS.SERVER.UI.EXPLORER.CATALOG=Catalogs
 #
 ## Update Offline Items
 #
-DATATOOLS.SERVER.UI.EXPLORER.UPDATE_OFFLINE = Save Offline
-DATATOOLS.SERVER.UI.EXPLORER.WORKOFFLINE = Work Offline
+DATATOOLS.SERVER.UI.EXPLORER.UPDATE_OFFLINE = &Save Offline
+DATATOOLS.SERVER.UI.EXPLORER.WORKOFFLINE = &Work Offline
+DATATOOLS.SERVER.UI.EXPLORER.UPDATE_OFFLINE_JOB = Save Offline
+DATATOOLS.SERVER.UI.EXPLORER.WORKOFFLINE_JOB = Work Offline
 DATATOOLS.SERVER.UI.CONNECTION.OFFLINE.MESSAGE = Offline content has not been found in your workspace.\nRun "Save Offline" when you are connected.
 DATATOOLS.SERVER.UI.CONNECTION.OFFLINE.TITLE = Connection failed
 DATATOOLS.SERVER.UI.CONNECTION.ERROR.MESSAGE = Connection has failed. The following error was reported:\n"{0}"\n\nDo you want to work offline?
