--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/result/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/result/messages.properties
@@ -13,3 +13,5 @@ GroupSQLResultRunnable_group_exec=Group execution
 
 GroupSQLResultRunnable_title=Continue Execution
 GroupSQLResultRunnable_message=Error occurred when executing last statement(s). Do you want to continue?
+
+sqlEditorName=SQL Editor
