--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/result/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/result/messages.properties
@@ -6,3 +6,4 @@ CallableSQLResultRunnable_registerOutParameter_debug=REGISTER param index: {0} n
 CallableSQLResultRunnable_setInParameter_debug=SETIN param index: {0} value: {1} sqlType: {2} paramType: {3}
 CallableSQLResultRunnable_getStatementOutParam= Failed to get "out" parameters
 CallableSQLResultRunnable_prepareStatement=Failed to prepare statement
+Routineeditor_name=Routine Editor
