[166847] Incomplete message text

--- a/plugins/org.eclipse.datatools.connectivity.oda.template.ui/src/org/eclipse/datatools/connectivity/oda/template/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.template.ui/src/org/eclipse/datatools/connectivity/oda/template/ui/nls/messages.properties
@@ -19,7 +19,7 @@ baseSection_optLabel_dataSetName=Data S&et Display Name
 baseSection_optLabel_dataSourceName=Data &Source Display Name
 baseSection_dataSetNameSuffix=Data Set
 baseSection_dataSourceNameSuffix=Data Source
-baseSection_illegaCharsForIdentifier=The input value contains character(s) that is not legal for the 
+baseSection_illegaCharsForIdentifier=The input value contains character(s) that is not legal for the {0}.
 baseSection_pageDesc=Specify the options that will be used to generate the Open Data Access (ODA) plug-in.
 #
 designSection_optLabel_driverClass=ODA Runtime &Driver Class
