CheckIn: Fixed bug 166297,166725,167521, and corresponding test case changed

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -54,6 +54,7 @@ error.emptyPath=The file URL is empty.
 error.xpath.canNotContainAttribute=The XPath expression cannot map to an XML attribute.
 error.dataset.maxRowNumberError=The max row should be a non-negative number.
 error.columnMapping.noMappingColumn=Please map at least one column.
+error.columnMapping.tableMappingXPathNotExist=The table mapping XPath does not exist.
 error.file.null=All the URLs are empty, it means you haven't select any data source. Are you sure you want to keep it?
 error.columnMapping.sameColumnName=The column name [{0}] already exists. Please use another name.
 error.invalidXpath=The XPath expression "{0}" is invalid.
