--- a/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
@@ -8,3 +8,4 @@ Query.InvalidQueryText=The query text is invalid.
 RelationInformation.InputStringCannotBeNull=The input string cannot be null or blank. 
 RelationInformation.InvalidDataTypeName=The provided data type name is invalid.
 DateUtil.ConvertFails=Convert to date fails. Source:
+dataTypes.typeNameInvalid=Data Type Name Invalid:
