--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/result/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/result/messages.properties
@@ -7,3 +7,4 @@ CallableSQLResultRunnable_setInParameter_debug=SETIN param index: {0} value: {1}
 CallableSQLResultRunnable_getStatementOutParam= Failed to get "out" parameters
 CallableSQLResultRunnable_prepareStatement=Failed to prepare statement
 Routineeditor_name=Routine Editor
+CallableSQLResultRunnable_return_status=(return status = {0})
