Fix tracker bug 90250 IOD: updating Table mapping in Preferences of ODA XML driver cause data lost.

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -19,6 +19,7 @@ xPathChoosePage.messages.rowMapping=Table Mapping
 xPathChoosePage.messages.xPathExpression=&XPath Expression
 xPathChoosePage.messages.xmlStructure=XML Structure
 xPathChoosePage.messages.xmlColumnMapping=Column Mapping
+xPathChoosePage.messages.xpathChange=Make sure the changed table mapping is compatible with the column mapping if applicable   
 
 #sample xml data file page messages
 xmlDataSetSelectionPage.messages.lineofdata=lines of source data
