--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2004, 2006 Actuate Corporation.
+# Copyright (c) 2004, 2007 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -47,3 +47,7 @@ stringSubUtil_SUBSTITUTION_LIST_CANNOT_BE_NULL=The string substitution list cann
 stringSubUtil_SUBSTITUTION_VALUE_CANNOT_BE_NULL=The string substitution value cannot be null.
 stringSubUtil_TEXT_STRING_CANNOT_BE_NULL=The text string cannot be null.
 stringSubUtil_NAME_VALUE_MAP_CANNOT_BE_NULL=The name-value map cannot be null.
+#
+profileProperty_PROFILE_NAME=Connection Profile Name
+profileProperty_PROFILE_STORE_PATH=Connection Profile Store URL
+profileProperty_GROUP_PROPERTIES=ODA Connection Profile Properties
