--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2006 Actuate Corporation.
+# Copyright (c) 2006, 2007 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -24,6 +24,8 @@ wizard_missingDataSourceId=Missing ODA Data Source ID in the Connection Profile 
 wizard_invalidManifest=Invalid plug-in manifest content in the oda.design.ui.dataSource extension.
 page_defaultDataSourceTitle=Custom Data Source Properties
 designSession_invalidArgument=Invalid argument specified in design session method.
+designSession_invalidEditApiCall=Invalid design session API call for editing a design.
+designSession_invalidNewDesignApiCall=Invalid design session API call for creating a new design.
 designSession_invalidProfileName=Unable to locate the specified linked profile ({0}).
 designSession_missingDataSetUIElement=No dataSetUI element is defined for OdaDataSourceId ({0}) and OdaDataSetId ({1}).
 manifest_missingAttributeValue=Missing value in required attribute ({0}).
@@ -36,3 +38,15 @@ ui_defaultDataSourceTitle=Data Source Connection Properties
 ui_requiredFieldsMissingValue=One or more required fields (marked with '*') are missing a value.
 ui_errorLabel=Error
 ui_errorCreatingCustomCtrls=Error encountered in creating and initializing custom controls.
+profilePage_pageTitle=Select a Connection Profile
+profilePage_pageLabel=Connection Profile
+profilePage_selectProfileDefaultMessage=Select the connection profile from which to create a data source
+profilePage_label_profileStore=Connection Profile &Store:
+profilePage_button_browse=&Browse...
+profilePage_odaTreeName=ODA Data Sources
+profilePage_checkboxLabel_useDefaultName=&Use the default data source name
+profilePage_label_dataSourceName=&Data Source Name:
+profilePage_error_emptyName=Data source name must not be blank.
+profilePage_checkboxTooltip_maintainLink=Always use the Connection Profile Store's externalized property values in the data source.
+profilePage_checkboxLabel_maintainLink=Use &externalized properties in Connection Profile Store
+profilePage_error_invalidName=Data source name is invalid.
