--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -50,4 +50,4 @@ stringSubUtil_NAME_VALUE_MAP_CANNOT_BE_NULL=The name-value map cannot be null.
 #
 profileProperty_PROFILE_NAME=Connection Profile Name
 profileProperty_PROFILE_STORE_PATH=Connection Profile Store URL
-profileProperty_GROUP_PROPERTIES=ODA Connection Profile Properties
+profileProperty_GROUP_PROPERTIES=External Connection Profile Reference
