--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2004, 2006 Actuate Corporation.
+# Copyright (c) 2004, 2007 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -22,6 +22,7 @@ helper_cannotConstructConnectionFactory=Unable to create the ODA driver's connec
 helper_inadequatePermissionsForCompatibility=Cannot provide backwards compatibility due to inadequate permissions.
 helper_connectionIsInactive=The established connection to the data source is not active.
 helper_maxConcurrentStatementsReached=Maximum active concurrent statements reached for this connection.
+helper_methodNotImplemented=Underlying ODA driver has not implemented the API interface method ({0} ).
 helper_prepareFailed=Prepare failed.
 helper_cannotGetResultSetMdBeforePrepare=Cannot get result set metadata before statement has been prepared.
 helper_cannotExecuteBeforePrepare=Cannot execute the statement before statement has been prepared.
