add sourceLocaterProvider extension point

--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/src/org/eclipse/datatools/sqltools/debugger/core/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/src/org/eclipse/datatools/sqltools/debugger/core/internal/messages.properties
@@ -49,6 +49,7 @@ SPLaunchConfigurationDelegate_CreatingClientConn=Creating client connection
 SPLaunchConfigurationDelegate_AttachingConn=Attaching to connection
 SPLaunchConfigurationDelegate_NoPermission=Cannot debug. Maybe you do not have enough permission.
 SPLaunchConfigurationDelegate_CreatingDebugger=Creating debugger
+SPLaunchConfigurationDelegate_Invalid_locator=Invalid source locator extension defined by plug-in \"{0}\": \"id\" not specified.
 
 
 perspective_DebuggerPerspective_activeWinNull1=Failed to change perspective, as the active window could not be retrieved
