--- a/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
@@ -10,3 +10,4 @@ RelationInformation.InvalidDataTypeName=The provided data type name is invalid.
 RelationInformation.InvalidFilterDefinition=The filter definition is invalid. 
 DateUtil.ConvertFails=Convert to date fails. Source:
 dataTypes.typeNameInvalid=Data Type Name Invalid:
+ui.invalidXSDFile=The provided xsd file is invalid.
