CheckIn:Fix bugzilla bug 152443Support boolean type in data set

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -39,6 +39,7 @@ datatypes.integer=Integer
 datatypes.string=String
 datatypes.date=Date
 datatypes.time=Time
+datatypes.boolean=Boolean
 
 tooltip.flatfilestyle=Move the mouse to each flat file style for more infomation
 tooltip.csv=Comma-{ , } Seperated Values
