CheckIn:Fix bugzilla bug 152443Support boolean type in data set

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -68,6 +68,7 @@ datatypes.integer=Integer
 datatypes.string=String
 datatypes.date=Date
 datatypes.time=Time
+datatypes.boolean=Boolean
 
 #column name in column mapping table
 columnName.name=Name
