Fixed NPE when collecting data source design changes after having removed the external reference.

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -50,3 +50,4 @@ profilePage_error_emptyName=Data source name must not be blank.
 profilePage_checkboxTooltip_maintainLink=Always use the Connection Profile Store's externalized property values in the data source.
 profilePage_checkboxLabel_maintainLink=Use &externalized properties in Connection Profile Store
 profilePage_error_invalidName=Data source name is invalid.
+profilePage_error_invalidProfileStorePath=Invalid path for a connection profile store
