Externalized strings; cleaned up externalized string tags

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/i18n/messages.properties
@@ -51,3 +51,4 @@ query_streamClosed=Stream closed
 query_invalidTableName=Invalid table name:
 
 dateUtil.ConvertFails=Convert to date fails. Source:
+dateFormatISO_cannotConvert=Cannot convert the value of {0}.
