Externalized strings; cleaned up externalized string tags

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -39,6 +39,7 @@ sortSpec_NO_DYNAMIC_SORT_KEY_FOR_SORTMODENONE=This sortSpec with sortModeNone do
 sortSpec_ONE_SORTCOLUMN_FOR_SINGLE_COLUMN_MODE=A sort column already exists.  The sortModeSingleColumn mode allows a maximum of one dynamic sort column.
 sortSpec_ONE_SORTORDER_FOR_SINGLE_ORDER_MODE=The sortModeSingleOrder mode supports only one sort order.
 sortSpec_ONLY_IN_SINGLE_ORDER_MODE=Supported only in sortModeSingleOrder mode.
+sortSpec_INDEX_OUT_OF_BOUND=Index: {0}, count: {1}.
 #
 stringSubUtil_NO_STRING_VALUE_TO_REPLACE=No string value to replace: {0}.
 stringSubUtil_DELIMITER_CANNOT_BE_EMPTY=The delimiter cannot be an empty string or contain only white spaces.
