refine the connection info composite: no need to input db name, select profile name directly, show connection status in the internal toolbar

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
@@ -10,3 +10,12 @@ SelectProfileGroup_error_init=Error initializing SelectProfileGroup using: {0}
 SelectProfileDialog_noprofile=There is no connection profile associated with this resource. Select a connection profile type/name.
 SelectProfileDialog_wrongprofile=The connection profile (\"{0}\") associated with this resource is not valid. Select a connection profile type/name.
 ConnectionInfoGroup_database_name=Data&base name:
+#simplified labels
+ConnectionInfoGroup_profile=Connection &profile:
+ConnectionInfoGroup_profile_group=Connection &profile
+ConnectionInfoGroup_type=&Type:
+ConnectionInfoGroup_name=&Name:
+ConnectionInfoGroup_database=Data&base:
+ConnectionInfoGroup_status=Status:
+ConnectionInfoGroup_status_connected=Connected
+ConnectionInfoGroup_status_disconnected=Disonnected
