CheckIn: Fix bugzilla bug 166007. Report is not able to fetch all items from XML data source file

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -30,6 +30,7 @@ button.refresh=Refresh
 menu.menuItem.removeAll=Remove All
 menu.menuItem.remove=Remove
 lable.selectXmlFile=Enter the URL of the &XML source or browse to the file containing the data:
+label.selectEncoding=Select &encoding for the XML source and schema specified above:
 lable.selectXmlSchmaFile=Enter the URL of the X&ML schema or browse to the file containing the\n schema. Leave this empty if no schema is available:
 label.preview=&Preview first
 label.useXMLFileFromDataSource=Use the XML file defined in data source
