migrated the test cases to tptp 44

--- a/tests/org.eclipse.datatools.sqltools.test/src/org/eclipse/datatools/sqltools/tests/verification/hooks/messages.properties
+++ b/tests/org.eclipse.datatools.sqltools.test/src/org/eclipse/datatools/sqltools/tests/verification/hooks/messages.properties
@@ -1,2 +1,3 @@
-Derby_driver_jar_list=c:/software/db-derby-10.1.2.1-bin/lib/derby.jar
-Log_file_location=c:/tmp/dtpguitest.log
+driver_name=Derby Embeded Driver
+driver_jar_list=c:/software/derby/lib/derby.jar
+Log_file_location=c:/temp/dtpguitest.log
