[BZ186182] Fixing issue with filter property page titles not wrapping

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -189,4 +189,6 @@ _UI_CHECKBOX_DISABLE_FILTER = D&isable filter
 _UI_MESSAGE_CRITERIA_REQUIRED = Please specify filtering criteria.
 _UI_MESSAGE_NO_QUOTES = The expression value must not contain quotes.
 _UI_MESSAGE_SELECTION_REQUIRED = Please select at least one item.
-
+_UI_SP_FILTER_PAGE_TITLE = Stored Procedure Filter Properties
+_UI_TABLE_FILTER_PAGE_TITLE = Table Filter Properties
+_UI_SCHEMA_FILTER_PAGE_TITLE = Schema Filter Properties
