[186820] Renamed the ODA XML and Web Services data sources

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -1,5 +1,5 @@
 # wizard dialog messages
-wizard.title.selectFolder=DTP XML Data Source
+wizard.title.selectFolder=XML Data Source
 wizard.defaultMessage.selectFolder=Define the URLs to the XML file and schema information
 wizard.title.newDataSet=New Data Set
 wizard.title.selectXmlFile=Select XML Data for Preview
@@ -80,4 +80,4 @@ dataset.new=New Data Set
 file.choose=&Browse...
 title.warning=Warning
 
-datasource.propertyPage.tooltip=DTP XML Data Source
+datasource.propertyPage.tooltip=XML Data Source
