--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -3,7 +3,7 @@
 # Common
 
 # WebServiceSelectionPage
-webServiceSelectionPage.message.default=DTP Web Service Data Source
+webServiceSelectionPage.message.default=Web Services Data Source
 webServiceSelectionPage.message.error=Specify the SOAP End Point URL or Select a WSDL Descriptor
 webServiceSelectionPage.group.wsdl=WSDL Descriptor
 webServiceSelectionPage.group.endPoint=SOAP End Point
@@ -11,7 +11,7 @@ webServiceSelectionPage.group.customClass=Custom Connection Class
 webServiceSelectionPage.label.wsdl=If the WSDL descriptor of the Web Services is available, enter its URL or browse to its location in the local file system
 webServiceSelectionPage.label.wsdlURI=WSDL URL or Location:
 webServiceSelectionPage.label.endPoint=Specify the SOAP End Point URL. This value is optional if a custom connection class is used
-webServiceSelectionPage.label.customClass=If connection and query to the Web Service is made through a custom Java class, enter the fully qualified class name here
+webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom Java class, enter the fully qualified class name here
 webServiceSelectionPage.button.browse=Browse...
 
 # OperationPage
