158221: default connection info; perspective customization

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/preferences/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/preferences/messages.properties
@@ -1,8 +1,3 @@
-
-SQLFilePage_description=General settings for SQL files
-SQLFilePage_connect_database_fail_title=Show error dialog when failed to connect to database
-
-
-
-
-
+SQLFilePage_description=General settings for SQL files/scrapbooks
+SQLFilePage_default_connection=Default connection information for new SQL files/scrapbooks
+SQLFilePage_override_profile=&Persist the target connection information when executing multiple SQL files 
