--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/result/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/result/messages.properties
@@ -10,6 +10,7 @@ GroupSQLResultRunnable_groups=({0} groups)
 GroupSQLResultRunnable_group=Group {0}
 GroupSQLResultRunnable_error_interrupted=The execution has been interrupted.
 GroupSQLResultRunnable_group_exec=Group execution
+GroupSQLResultRunnable_not_complete=Execution is not successful
 
 GroupSQLResultRunnable_title=Continue Execution
 GroupSQLResultRunnable_message=Error occurred when executing last statement(s). Do you want to continue?
