--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
@@ -3,12 +3,14 @@ SelectProfileDialog_create=C&reate...
 SelectProfileDialog_warning=Warning\!\n  The full feature of the editor will not be available without connection.
 SelectProfileDialog_error_jdbc_title=Connection Error
 SelectProfileDialog_profile_name=Connection profile &name:
-SelectProfileDialog_profile_type=Connection profile &type:
+SelectProfileDialog_profile_type=Database server &type:
 SelectProfileDialog_donot_connect=&Do not connect now
 SelectProfileDialog_error_jdbc_message=Error occurred while trying to establish connection
 SelectProfileGroup_error_init=Error initializing SelectProfileGroup using: {0}
 SelectProfileDialog_noprofile=There is no connection profile associated with this resource. Select a connection profile type/name.
 SelectProfileDialog_wrongprofile=The connection profile (\"{0}\") associated with this resource is not valid. Select a connection profile type/name.
+SelectProfileDialog_override_profile=&Persist the target connection information
+SelectProfileDialog_override_profile_tooltip=Select this option to persist the target connection information with the files
 ConnectionInfoGroup_database_name=Data&base name:
 #simplified labels
 ConnectionInfoGroup_profile=Connection &profile:
@@ -18,4 +20,13 @@ ConnectionInfoGroup_name=&Name:
 ConnectionInfoGroup_database=Data&base:
 ConnectionInfoGroup_status=Status:
 ConnectionInfoGroup_status_connected=Connected
-ConnectionInfoGroup_status_disconnected=Disonnected
+ConnectionInfoGroup_status_disconnected=Disconnected
+FilesConnectionInfoDialog_column_name=File name
+FilesConnectionInfoDialog_column_type=DB type
+FilesConnectionInfoDialog_column_profile=Profile
+FilesConnectionInfoDialog_column_database=Database
+ConnectionInfoDialog_title_for_file=Select Profile for the Files
+ConnectionInfoDialog_file_conn_info=Select &files:
+SELECT_ALL_TITLE=&Select All
+DESELECT_ALL_TITLE=&Deselect All
+FileExecution_job_name=SQL Files Execution
