*** empty log message ***

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
@@ -22,7 +22,7 @@ ConnectionInfoGroup_status=Status:
 ConnectionInfoGroup_status_connected=Connected
 ConnectionInfoGroup_status_disconnected=Disconnected
 FilesConnectionInfoDialog_column_name=File name
-FilesConnectionInfoDialog_column_type=DB type
+FilesConnectionInfoDialog_column_type=Database server type
 FilesConnectionInfoDialog_column_profile=Profile
 FilesConnectionInfoDialog_column_database=Database
 ConnectionInfoDialog_title_for_file=Select Profile for the Files
