[187945] Lost Reference to External Conn Profile when Editing a Data Source Design

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -37,7 +37,7 @@ operationPage.label.document=Documentation
 # SoapRequestPage
 soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text
 soapRequestPage.button.generateTemplate=Generate Template
-soapRequestPage.button.insertParameter=Insert\n Parameter...
+soapRequestPage.button.insertParameter=Insert Parameter...
 soapRequestPage.button.clear=Clear
 
 # ParameterInputDialog
